list of employee

--- a/app/Resources/views/patientDashboard.html.twig
+++ b/app/Resources/views/patientDashboard.html.twig
@@ -6,5 +6,6 @@
 	<ul>
 		{{ helpers.tab('patient_dashboard', 'home', 'Strona glowna') }}
 		{{ helpers.tab('patient.medicalHistory','calendar', 'Karta pacjenta') }}
+		{{ helpers.tab('patient.listOfEmployees', 'users', 'Lekarze') }}
 	</ul>
 {% endblock %}
