--- a/web/css/style.css
+++ b/web/css/style.css
@@ -136,6 +136,7 @@ div#content .right .widgetbox:last-child { margin-bottom: 0; border-bottom: 0; }
 .window1 h3 { -moz-border-radius: 3px 3px 0 0; -webkit-border-radius: 3px 3px 0 0; border-radius: 3px 3px 0 0;  }
 .window1 h3 { border: 1px solid #ddd; background: #eee url(../images/thead.png) repeat-x top left; }
 .window1 h3 span { padding: 15px 15px; display: block; }
+.window1 h3 span a img { vertical-align: sub; }
 .window1 .inside { background: #fcfcfc; padding: 20px 15px; color: #666; overflow: hidden; border: 1px solid #ddd; border-top: 0; }
 .window1 .inside { -moz-border-radius: 0 0 3px 3px; -webkit-border-radius: 0 0 3px 3px; border-radius: 0 0 3px 3px; }
 .window1 .inside p { margin: 5px 0; }
