--- a/src/Mcms/EmployeeBundle/Resources/views/Patient/show.html.twig
+++ b/src/Mcms/EmployeeBundle/Resources/views/Patient/show.html.twig
@@ -6,7 +6,7 @@
 {% block content %}
     <h1 class="pageTitle">Dane pracownika</h1>
 	<div class="window1">
-	<h3><span style="height:20px;">Powiązane z pracownikiem: <a href="{{ path('patient.showEmployeeTimetable', { employeeId: employee.id }) }}"><img src="{{ asset('images/icons/calendar.png') }}" alt="Terminarz" /></a></span></h3>
+	<h3><span style="height:20px;"><a href="{{ path('patient.showEmployeeTimetable', { employeeId: employee.id }) }}"><img src="{{ asset('images/icons/calendar.png') }}" alt="Terminarz" /></a></span></h3>
 		<div class="inside">
   		<div class="one_half">
   			<b>Imię:</b> {{ employee.firstname }} <br />
