profile tpls WIP

--- a/app/Resources/views/employeeDashboard.html.twig
+++ b/app/Resources/views/employeeDashboard.html.twig
@@ -4,6 +4,7 @@
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('users_list', 'home', 'Strona glowna') }}
+		{{ helpers.tab('employee_dashboard', 'home', 'Strona glowna') }}
+		{{ helpers.tab('employee_dashboard', 'users', 'Pacjenci') }}
 	</ul>
 {% endblock %}
