--- a/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
@@ -4,10 +4,15 @@
 {% block title %}{{ app.user }} - Zmiana hasła użytkownika{% endblock %}
 
 {% block content %}
-	<h1>Zmiana hasła użytkownika <em>{{app.user}}</em></h1>
+	<h1 class="pageTitle">Zmiana hasła użytkownika <em style="color:#4C6A98">{{app.user}}</em></h1>
+	<div class="window1">
+	<h3><span></span></h3>
+	<div class="inside">
     <form action="{{ path('admin.updatePassword')}}" method="post" {{ form_enctype(form) }}>
         {{form_errors(form)}}
         {{ form_widget(form) }}
         <input type="submit" />
     </form>
+	</div>
+	</div>
 {% endblock %}
