--- a/src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{app.user}} - Profil użytkownika{% endblock %}
 {% block content %}
    
-    <h1 class="pageTitle">{{app.user}} Profile</h1>
+    <h1 class="pageTitle">Profil użytkownika {{app.user}}</h1>
 	<div class="window1">
 	<h3><span style="height:20px;"></span></h3>
 		<div class="inside">
@@ -17,7 +17,7 @@
 	
 		<ul class="dashboard">
 		<li><a href="{{ path('admin.editProfile') }}"><img src="{{ asset('images/icons/edit_big.png') }}"><span>Edytuj profil</span></a></li>
-		<li><a href="{{ path('admin.changePassword') }}"><img src="{{ asset('images/icons/prof_paswd.png') }}" height="40px"><span>Zmien hasło</span></a></li>
+		<li><a href="{{ path('admin.changePassword') }}"><img src="{{ asset('images/icons/prof_paswd.png') }}" height="40px"><span>Zmień hasło</span></a></li>
 		</ul>
 		
 		</div>
