--- a/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
@@ -8,10 +8,13 @@
 	<div class="window1">
 	<h3><span></span></h3>
 	<div class="inside">
-    <form action="{{ path('admin.updatePassword')}}" method="post" {{ form_enctype(form) }}>
+    <form class="form_default" action="{{ path('admin.updatePassword')}}" method="post" {{ form_enctype(form) }}>
         {{form_errors(form)}}
-        {{ form_widget(form) }}
-        <input type="submit" />
+       	<label>Stare hasło:</label> {{ form_widget(form.oldPassword) }}<br />
+       	<label>Nowe hasło:</label> {{ form_widget(form.newPassword.first) }}<br />
+       	<label>Potwierdź nowe hasło:</label> {{ form_widget(form.newPassword.second) }}<br />
+        <input type="submit" style="margin: 10px 0px 0px 52px" />
+        {{form_rest(form)}}
     </form>
 	</div>
 	</div>
