--- a/src/Mcms/UserBundle/Resources/views/Patient/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Patient/changePassword.html.twig
@@ -1,13 +1,22 @@
 {# src/Mcms/UserBundle/Resources/views/Patient/changePassword.html.twig #}
 {% extends '::patientDashboard.html.twig' %}
+{% form_theme form '::formErrors.html.twig' %}
 
 {% block title %}{{ app.user }} - Zmiana hasła użytkownika{% endblock %}
 
 {% block content %}
-	<h1>Zmiana hasła użytkownika <em>{{app.user}}</em></h1>
-    <form action="{{ path('patient.updatePassword')}}" method="post" {{ form_enctype(form) }}>
+	<h1 class="pageTitle">Zmiana hasła użytkownika <em style="color:#4C6A98">{{app.user}}</em></h1>
+	<div class="window1">
+	<h3><span></span></h3>
+	<div class="inside">
+    <form class="form_default" action="{{ path('patient.updatePassword')}}" method="post" {{ form_enctype(form) }}>
         {{form_errors(form)}}
-        {{ form_widget(form) }}
-        <input type="submit" />
+       	<label>Stare hasło:</label> {{ form_widget(form.oldPassword) }}<br />
+       	<label>Nowe hasło:</label> {{ form_widget(form.newPassword.first) }}<br />
+       	<label>Potwierdź nowe hasło:</label> {{ form_widget(form.newPassword.second) }}<br />
+        <input type="submit" style="margin: 10px 0px 0px 52px" />
+        {{form_rest(form)}}
     </form>
+	</div>
+	</div>
 {% endblock %}
