Added base patients list

--- a/app/Resources/views/employeeDashboard.html.twig
+++ b/app/Resources/views/employeeDashboard.html.twig
@@ -5,6 +5,6 @@
 {% block tabmenu %}
 	<ul>
 		{{ helpers.tab('employee_dashboard', 'home', 'Strona glowna') }}
-		{{ helpers.tab('employee_dashboard', 'users', 'Pacjenci') }}
+		{{ helpers.tab('employee.patientList', 'users', 'Pacjenci') }}
 	</ul>
 {% endblock %}
