--- a/src/Mcms/TimetableBundle/Resources/views/Patient/monthlyTimetable.html.twig
+++ b/src/Mcms/TimetableBundle/Resources/views/Patient/monthlyTimetable.html.twig
@@ -12,48 +12,8 @@
 	<thead>
 		<tr><td class="hour_head">Godziny</td><td class="cont_head">Tresc</td></tr>
 	</thead>
-		<tr><td class="hour">8.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">9.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">10.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">11.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">12.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">13.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">14.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">15.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">16.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">17.00</td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour"></td><td class="cont"></td></tr>
-		<tr><td class="hour">18.00</td><td class="cont"></td></tr>
-		
+    <tbody>
+	</tbody>	
 	</table>
 	
 	</div>
@@ -90,6 +50,7 @@
             beforeShowDay: disableDays,
             onSelect: function(dateText, inst){
                 console.log(disabledDays[dateText]);
+                markHours(disabledDays[dateText]);
             },
             onChangeMonthYear: function(year, month, inst){
                 $.ajax({
@@ -100,8 +61,32 @@
             });
             }
         });
- 
 
+        function markHours(arr){
+            $('#hour_table table tbody tr').each(function(index) {
+                if($.inArray($(this).attr('id'), arr)!=-1) {
+                    $(this).children(".cont").html('WOLNE');
+                }else{
+                    $(this).children(".cont").html('ZAJETE');
+                }
+            });
+        }
+ 
+        $(document).ready(function() {
+            for(var h=8; h<=17; h++) {
+                for(var m=0; m<60; m+=15) {
+                    var d=new Date();
+                    d.setHours(h);
+                    d.setMinutes(m);
+                    
+                    var hours = (d.getHours()<10?'0':'')+d.getHours();
+                    var minutes = (d.getMinutes()<10?'0':'')+d.getMinutes();
+
+                    $('#hour_table table tbody').append('<tr id="'+hours+':'+minutes+'"><td class="hour">'+hours+':'+minutes+'</td><td class="cont"></td></tr>');
+                }
+            }
+
+        });
 </script>
 
 	
