--- a/src/Mcms/PatientBundle/Resources/views/Employee/show.html.twig
+++ b/src/Mcms/PatientBundle/Resources/views/Employee/show.html.twig
@@ -1,8 +1,20 @@
 {# src/Mcms/PatientBundle/Resources/views/Employee/show.html.twig #}
 {% extends '::employeeDashboard.html.twig' %}
 
+{% block title %} {{ patient }} - dane pacjenta{% endblock %}
+
 {% block content %}
-    <h2>{{ patient }} Details</h2>
-    <a href="{{ path('employee.medicalHistory', { patientId: patient.id }) }}">MedicalHistory</a>
-    <p><a href="{{ path('employee.patientList') }}">Back to list</a></p>
+    <h1 class="pageTitle">Dane pacjenta</h1>
+	<div class="window1">
+	<h3><span style="height:20px;"><a href="{{ path('employee.medicalHistory', { patientId: patient.id }) }}"><img src="{{ asset('images/icons/calendar.png') }}" alt="Karta pacjenta" /></a></span></h3>
+		<div class="inside">
+  		<div class="one_half">
+  			<b>Imię i nazwisko:</b> {{ patient }} <br />
+  			<b>Pesel:</b> {{ patient.pesel }} <br />
+  			<b>Adres:</b> {{ patient.address1 }}{% if patient.address2 %}/{% endif %}{{ patient.address2 }} <br />
+  			{{ patient.postalCode }} {{ patient.city }}
+    	<p><a href="{{ path('employee.patientList') }}">Powrót do listy pacjentów</a></p>
+    	</div>
+		</div>
+	</div>	
 {% endblock %}
