--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/new.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/new.html.twig
@@ -11,6 +11,7 @@
 		<div class="inside">
   		<div>
         	{{ form_widget(form.content) }}
+            {{ form_rest(form) }}
     </form>
     	</div>
 		</div>
