Added correct registartion new employee account action. Fixed route params for employees list action

--- a/src/Mcms/EmployeeBundle/Resources/views/Patient/list.html.twig
+++ b/src/Mcms/EmployeeBundle/Resources/views/Patient/list.html.twig
@@ -40,7 +40,7 @@
 				<tr>
 					<td>{{ employee.firstName }} {{ employee.lastName }}</td>
 					<td>{{ employee.position }}</td>
-					<td><a class="profilelink" href="{{ path('patient.showEmployee', { 'id': employee.id }) }}">{{ employee.id }}</a></td>
+					<td><a class="profilelink" href="{{ path('patient.showEmployee', { 'employeeId': employee.id }) }}">{{ employee.id }}</a></td>
 				</tr>
 			{% endfor %}
 		</table>		
