--- a/src/Mcms/UserBundle/Resources/views/show.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/show.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/UserBundle/Resources/views/show.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 
 {% block javascripts_head %}{% endblock %}
 
