little style changes sidebar/calendar

--- a/src/Mcms/DashboardBundle/Resources/views/Admin/index.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Admin/index.html.twig
@@ -1,6 +1,8 @@
 {# src/Mcms/DashboardBundle/Resources/views/Admin/index.html.twig #}
 {% extends '::adminDashboard.html.twig' %}
 
+{% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
+
 {% block content %}
     Admin dashboard content
 {% endblock %}
