--- a/src/Mcms/EmployeeBundle/Resources/views/Admin/list.html.twig
+++ b/src/Mcms/EmployeeBundle/Resources/views/Admin/list.html.twig
@@ -11,6 +11,8 @@
 
 {% block title %} Lista lekarzy {% endblock %}
 
+{% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
+
 {% block content %}
 <h1 class="pageTitle">Lista lekarzy</h1>
 	<div class="tableOpt">
