--- a/web/css/calendar.css
+++ b/web/css/calendar.css
@@ -140,7 +140,7 @@
 	#hour_table{width:400px; height:auto; margin: 15px 0; float:left;background: #FFF;}
 	#hour_table td{}
 	#hour_table td.hour{padding:3px 20px 3px 10px; background:#FFFFCC;border-bottom:1px dotted #ddd;border-right:1px dotted #ddd;}
-	#hour_table td.cont{ width:100%;border-bottom:1px dotted #ddd}
+	#hour_table td.cont{ width:100%;border-bottom:1px dotted #ddd; text-align:center;}
 	#hour_table td.cont:hover{ width:100%;border-bottom:1px dotted #ddd; background:#f5f5f5;}
 	#hour_table tr{border-bottom:1px dotted grey; height:25px;}
 	#hour_table td.hour_head{font-weight:bold; padding:3px 20px 3px 10px; background:#FFFFCC;border-bottom:1px dotted #ddd; border-right:1px dotted #ddd;}
