Payment feature update

--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/show.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/show.html.twig
@@ -12,5 +12,6 @@
     		{{ entry.content }}
     	</div>
 		</div>
+		<a href="{{ path('employee.paymentShow', { patientId: entry.patient.id, paymentId: entry.payment.id }) }}">PLATNOSC</a>
 	</div>	
 {% endblock %}
