Payment feature upadte v3 (Edit)

--- a/src/Mcms/PaymentBundle/Resources/views/Employee/new.html.twig
+++ b/src/Mcms/PaymentBundle/Resources/views/Employee/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 	{{ form_errors(form) }}
-	<h1 class="pageTitle">Utwórz nowy produkt</h1>
+	<h1 class="pageTitle">Utwórz nową platność</h1>
 	<div class="window1">
 	    <h3><span></span></h3>
 	    <div class="inside">
@@ -46,5 +46,4 @@
     	$newLinkLi.before($newFormLi);
     }
 </script>
-{% endblock %}
-	
+{% endblock %}	
