Updated edit medical history entry feature

--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/show.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/show.html.twig
@@ -12,6 +12,8 @@
     		{{ entry.content }}
     	</div>
 		</div>
+		{% if entry.payment %}
 		<a href="{{ path('employee.paymentShow', { patientId: entry.patient.id, paymentId: entry.payment.id }) }}">PLATNOSC</a>
+		{% endif %}
 	</div>	
 {% endblock %}
