--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/edit.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/edit.html.twig
@@ -2,9 +2,66 @@
 {% extends '::employeeDashboard.html.twig' %}
 
 {% block content %}
-    <form class="form_default" action="{{ path('employee.medicalHistoryUpdate',{ patientId: patient.Id, entryId: entry.Id }) }}" method="post" {{ form_enctype(form) }}>
-        {{ form_errors(form) }}
-        {{ form_widget(form) }}
-        <button type="submit">Update</button>
-    </form>
+	<h1 class="pageTitle">Edytuj wpis</h1>
+	<div class="window1">
+	    <h3><span>Wpis w karcie: {{ patient }}</span></h3>
+	    <div class="inside">
+    		<form class="form_default" action="{{ path('employee.medicalHistoryUpdate',{ patientId: patient.Id, entryId: entry.Id }) }}" method="post" {{ form_enctype(entryForm) }}>
+	        	{{ form_errors(entryForm) }}
+	        	{{ form_widget(entryForm) }}
+	        	{{ form_errors(paymentForm) }}
+	        	<ul class="products" data-prototype="{{ form_widget(paymentForm.products.get('prototype')) | e }}">
+	        		{% for product in paymentForm.products %}
+                    	<li>{{ form_widget(product) }}</li>
+                	{% endfor %}
+                	{{ form_row(paymentForm._token) }} 
+				</ul>
+	        	<button type="submit">Update</button>
+    		</form>
+    	</div>
+    </div>
+{% endblock %}
+
+
+{% block javascripts_body %}
+    {{ parent() }}
+<script type="text/javascript">
+    var collectionHolder = $('ul.products');
+
+    var $addProductLink = $('<a href="#" class="add_product_link">Add a product</a>');
+    var $newLinkLi = $('<p></p>').append($addProductLink);
+
+    jQuery(document).ready(function() {
+        collectionHolder.append($newLinkLi);
+
+        $addProductLink.on('click', function(e) {
+            e.preventDefault();
+            addProductForm(collectionHolder, $newLinkLi);
+        });
+
+        collectionHolder.find('li').each(function() {
+            addTagFormDeleteLink($(this));
+        });
+    });
+
+    function addProductForm(collectionHolder, $newLinkLi) {
+        var prototype = collectionHolder.attr('data-prototype');
+        console.log(prototype);
+        var newForm = prototype.replace(/\$\$name\$\$/g, collectionHolder.children().length);
+        var $newFormLi = $('<p></p>').append(newForm);
+        addTagFormDeleteLink($newFormLi);
+        $newLinkLi.before($newFormLi);
+    }
+
+    function addTagFormDeleteLink($productFormLi) {
+        var $removeFormA = $('<a href="#">delete this product</a>');
+        $productFormLi.append($removeFormA);
+
+        $removeFormA.on('click', function(e) {
+            e.preventDefault();
+
+            $productFormLi.remove();
+    });
+}
+</script>
 {% endblock %}
